fix(upcoming assignments) : removing overflow scroll property to hide scroll bars

--- a/src/components/app/Homeworks/UpcomingAssignments.css
+++ b/src/components/app/Homeworks/UpcomingAssignments.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     padding: 15px;
     gap: 10px;
-    overflow: scroll !important;
 }
 
 .upcoming-assignments {
